# SENSES

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTIONS.md  LICENSE  README.md  SENSES_algorithm.txt  basic_example_of_SENSES.txt  custom_z_score_threshold.txt  nasic_example_of_SENSES.txt  prepare_repo.ps1  prepare_repo.sh  pyproject.toml  senses.py
.github/scripts/: set-branch-protection.ps1
.github/workflows/: ci.yml
examples/: README.md  senses_demo.ipynb
tests/: __init__.py  test_senses.py
